/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.Edi.Responses";

message AggregatedTimeSeriesRequestAccepted {
  repeated Serie series = 1;
}

message Serie {
  string settlement_version = 1;
  string grid_area = 2;
  QuantityUnit quantity_unit = 3;
  Period period = 4;
  repeated TimeSeriesPoint time_series_points = 5;
  TimeSeriesType time_series_type = 6;
}

message Period {
  google.protobuf.Timestamp start_of_period = 1;
  google.protobuf.Timestamp end_of_period = 2;
  Resolution resolution = 3;
}

message TimeSeriesPoint {

  // The start of the time interval where the energy was produces/consumed.
  google.protobuf.Timestamp time = 1;

  /*
   * 3 digit scale decimal value of the energy quantity.
   * Value is only set when quality is not set to missing.
   */
  optional DecimalValue quantity = 2;

  // The aggregated quality currently represents a value suitable for creation of RSM-014 CIM XML messages.
  QuantityQuality quantity_quality = 3;
}

/*
 * Unspecified is unused but according to best practice.
 * Read more at https://protobuf.dev/programming-guides/style/#enums.
 */
enum QuantityQuality{
  QUANTITY_QUALITY_UNSPECIFIED = 0;
  QUANTITY_QUALITY_MISSING = 1;
  QUANTITY_QUALITY_ESTIMATED = 2;
  QUANTITY_QUALITY_MEASURED = 3;
  QUANTITY_QUALITY_INCOMPLETE = 4;
  QUANTITY_QUALITY_CALCULATED = 5;
}

/*
 * Unspecified is unused but according to best practice.
 * Read more at https://protobuf.dev/programming-guides/style/#enums.
 */
enum QuantityUnit{
  QUANTITY_UNIT_UNSPECIFIED = 0;
  QUANTITY_UNIT_KWH = 1;
}

/*
 * Representation of a decimal value.
 * See more at https://learn.microsoft.com/en-us/dotnet/architecture/grpc-for-wcf-developers/protobuf-data-types#decimals.
 * Example: 12345.6789 -> { units = 12345, nanos = 678900000 }
 */
message DecimalValue {

  // Whole units part of the amount
  int64 units = 1;

  // Nano units of the amount (10^-9)
  // Must be same sign as units
  sfixed32 nanos = 2;
}

/*
 * Representation of the resolution.
 * Unspecified is unused but according to best practice.
 * Read more at https://protobuf.dev/programming-guides/style/#enums.
 */
enum Resolution{
  RESOLUTION_UNSPECIFIED = 0;
  RESOLUTION_PT1H = 1;
  RESOLUTION_PT15M = 2;
}

/*
 * Representation of market evaluation point type,
 */
enum TimeSeriesType {
  /*
   * Unspecified is unused but according to best practice.
   * Read more at https://protobuf.dev/programming-guides/style/#enums.
   */
  TIME_SERIES_TYPE_UNSPECIFIED = 0;
  TIME_SERIES_TYPE_PRODUCTION = 1;
  TIME_SERIES_TYPE_NON_PROFILED_CONSUMPTION = 2;
  TIME_SERIES_TYPE_FLEX_CONSUMPTION = 3;
  TIME_SERIES_TYPE_NET_EXCHANGE_PER_GA = 4;
  TIME_SERIES_TYPE_NET_EXCHANGE_PER_NEIGHBORING_GA = 5;
  TIME_SERIES_TYPE_GRID_LOSS = 6;
  TIME_SERIES_TYPE_NEGATIVE_GRID_LOSS = 7;
  TIME_SERIES_TYPE_POSITIVE_GRID_LOSS = 8;
  TIME_SERIES_TYPE_TOTAL_CONSUMPTION = 9;
}
